--- a/public/stylesheets/game_room.css
+++ b/public/stylesheets/game_room.css
@@ -46,6 +46,13 @@ body {
   padding: 0px;
 }
 
+.direction-container {
+  width: 50px;
+  padding: 5px;
+  margin: 10px;
+  z-index: 0;
+}
+
 /* ================================================================================ */
 /* Game Elements */
 /* ================================================================================ */
