fixed register page bug

--- a/views/register.pug
+++ b/views/register.pug
@@ -30,4 +30,4 @@ block content
                 input.form-control(required, id="passwordInput" type='password', placeholder="Password", name="password")
               br
               button.btn.btn-success(id="register-btn" type="submit") Register
-              a.card-text.p-3(href="/register") Already have an account? Login
+              a.card-text.p-3(href="/login") Already have an account? Login
