--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,73 @@ body {
 a {
   color: #00B7FF;
 }
+
+.gradient {
+  position: relative;
+  
+}
+
+.gradient::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50));
+  z-index: 99;
+}
+
+#main-container {
+  position: absolute;
+
+  padding-top: 5%;
+
+  height: 100%;
+  width: 100%;
+
+  z-index: 100;
+}
+
+#main-title {
+  width: 100%;
+  
+  margin-bottom: 1%;
+
+  text-align: center;
+  color: white;
+  background-color: transparent;
+  z-index: 100;
+
+
+  font-size: 64px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+}
+
+
+#main-message {
+
+  width: 100%;
+
+  margin-bottom: 7.5%;
+  
+  text-align: center;
+  color: white;
+  background-color: transparent;
+  z-index: 100;
+
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+}
+
+#main-btn {
+  width: 100%;
+
+  z-index: 100;
+
+  font-size: 28px;
+}
+
